<resources>
    <string name="app_name">My Form Application</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_a_password">Enter a Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email address</string>
    <string name="select_job_title">Select a Job Title</string>
    <string name="select_a_title">Select a Title:</string>
    <string name="register">Register</string>
    <string name="your_account_details">Your Account Details</string>
    <string name="submit">Submit</string>
</resources>